[layout:BottomBar] fix annoying shift in mobile

--- a/src/layouts/BottomBar/_index.module.scss
+++ b/src/layouts/BottomBar/_index.module.scss
@@ -36,7 +36,6 @@
 			padding-top: 0;
 			padding-bottom: u.Rem(8px);
 			border-bottom-style: dashed;
-			letter-spacing: u.Rem(1px);
 		}
 	}
 }
